Version: 2.0.3
Date: ????
  Bugfixes:
    - Fixed that the search history would not be purged on configuration change, leading to crashes with non-existent items
    - Reverted the session history "fix" from v2.0.2 that was actually being caused by the above issue, and didn't actually fix anything
    - Fixed a crash with the listbox item clicked regex when an item name has brackets in it
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2020-07-25
  Features:
    - Clicking a machine on the recipe screen will give you a blueprint of that machine with the recipe set
    - Right-clicking the search textfield will clear it
  Bugfixes:
    - Fixed that the session history would sometimes get a duplicated home entry, causing a crash when trying to format the back button
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2020-07-20
  Changes:
    - Improved performance of "add to favorites" button
    - Remote interface:
      - Consolidated check_obj_valid into open_page, having it separate wasn't really necessary
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2020-07-19
  Features:
    - Added the ability to "pin" the GUI to the screen, so it can exist alongside other windows
    - Added the ability to "favorite" an object for easy access later
    - Added browse-able search history, keeping track of the last 20 searches
    - Added setting to display internal prototype names instead of translations
    - Added object type glyphs
    - Added settings for toggling specific recipe categories
    - Added an in-game settings screen for on-the-fly changes
    - Added German translation by LuziferSenpai
  Changes:
    - Completely rewrote the mod from scratch to improve code quality, efficiency, and structure